@@ -1,7 +1,9 @@
 File Name: CHANGES
 
-04/29/2015 FASP 1.7.3:
+05/01/2015 FASP 1.7.3:
 - Fix a bug: cmake does not recognize CC env variable sometimes.
+- Fix a bug: ILU static memory allocation causes seg fault for large problems.
+- Fix a bug: ILU "implicit none" missing.
 
 04/26/2015 FASP 1.7.2:
 - Fix a bug: Output of Krylov methods with saft-net.
